[package]
name = "lob-deribit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.79 ",features=["derive"]}
serde_json = "1.0.79"
itertools = "0.10.3"
tokio = { version = "1.17.0", features = ["full"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"]}
tokio-native-tls = "0.3.0"
futures-util = "0.3"
futures-channel = "0.3"
url = "*"
